fixed css issue, that causes the page to gain a scrollbar

--- a/widgets/searchbar/assets/css/searchbar.css
+++ b/widgets/searchbar/assets/css/searchbar.css
@@ -729,12 +729,13 @@ select:focus {
   position: relative;
   display: none;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
+  height: 69vh;
 }
 
 .gooey {
   position: absolute;
-  top: 100px;
+  top: 38vh;
   left: 50%;
   width: 142px;
   height: 40px;
@@ -773,8 +774,6 @@ select:focus {
   font-size: 22px;
   font-weight: normal;
   text-align: center;
-  margin-top: 120px;
-  margin-bottom: 266px;
 }
 
 @-moz-keyframes dot {
@@ -1040,10 +1039,7 @@ select:focus {
 
   /* prevent zooming on iPhone*/
   #hotels , #check_in_mobile, #check_out_mobile {
-    width: 114%;
-    transform: scale(0.875);
     position: relative;
-    left: -7%;
     height: 58px;
     font-size: 16px;
   }
